--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A sample react project serving as a coding playground to test out react features or troubleshoot development issues.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --hot --mode=development",
+    "start": "webpack serve --mode=development",
     "server": "node server.js",
     "build": "webpack --mode=development"
   },
@@ -31,11 +31,10 @@
     "html-webpack-plugin": "^5.3.2",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
-    "react-hot-loader": "^4.13.0",
     "style-loader": "^3.2.1",
     "webpack": "^5.49.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.0.0-beta.0"
   },
   "dependencies": {
     "axios": "^0.21.1",
